# Unix_client

./: .gitignore  CMakeLists.txt  README.md  main.c
test/: close_connection.c  connect.c  initialize_client.c  main.c  receive_data.c  send_data.c  user_command.c
unix_socket/: unix_socket.c  unix_socket.h
